--- a/cer/src/components/Corrusel/carrusel.css
+++ b/cer/src/components/Corrusel/carrusel.css
@@ -1,6 +1,7 @@
 .contenedorCarusel {
   margin-top: 2%;
   border-radius: 10%;
+  width: 100%;
 }
 .d-block {
   border-radius: 10px;
@@ -21,5 +22,11 @@ h3 {
   }
   p {
     display: none;
+  }
+  h3 {
+    font-size: medium;
+  }
+  .tituloVW {
+    font-size: medium;
   }
 }
