--- a/cer/src/components/Corrusel/carrusel.css
+++ b/cer/src/components/Corrusel/carrusel.css
@@ -13,9 +13,6 @@
 .tituloVW {
   color: black;
 }
-h3 {
-  font-size: xx-large !important;
-}
 @media screen and (max-width: 450px) {
   .parrafos {
     display: none;
@@ -23,10 +20,15 @@ h3 {
   p {
     display: none;
   }
-  h3 {
-    font-size: medium;
-  }
+
   .tituloVW {
-    font-size: medium;
+    font-size: small;
+    color: white;
+  }
+  .tittlePeugeot {
+    font-size: small;
+  }
+  .tittleFiat {
+    font-size: small;
   }
 }
