--- a/cer/src/App.css
+++ b/cer/src/App.css
@@ -40,3 +40,11 @@
 .read-the-docs {
   color: #888;
 }
+@media screen and (max-width: 450px) {
+  .logo {
+    width: 90%;
+  }
+  .contenedorApp {
+    width: 100%;
+  }
+}
