--- a/cer/src/components/Propuesta/Propuesta.css
+++ b/cer/src/components/Propuesta/Propuesta.css
@@ -12,6 +12,7 @@
   justify-content: space-around;
   align-items: center;
 }
+
 .discount {
   width: 50px;
   height: auto;
@@ -22,11 +23,19 @@
   margin: 1%;
   border-radius: 10px;
 }
+.envios:hover {
+  background-color: rgba(240, 248, 255, 0.767);
+  transition: 1s;
+}
 .pagos {
   background-color: rgba(239, 235, 235, 0.48);
   border: 2px solid black;
   margin: 1%;
   border-radius: 10px;
+}
+.pagos:hover {
+  background-color: rgba(240, 248, 255, 0.767);
+  transition: 1s;
 }
 .repuestos {
   background-color: rgba(239, 235, 235, 0.48);
@@ -34,11 +43,19 @@
   margin: 1%;
   border-radius: 10px;
 }
+.repuestos:hover {
+  background-color: rgba(240, 248, 255, 0.767);
+  transition: 1s;
+}
 .ofertas {
   background-color: rgba(239, 235, 235, 0.48);
   border: 2px solid black;
   margin: 1%;
   border-radius: 10px;
+}
+.ofertas:hover {
+  background-color: rgba(240, 248, 255, 0.767);
+  transition: 1s;
 }
 .tittle {
   color: azure;
@@ -60,7 +77,7 @@ p {
     background-image: url("../../assets/vertical.jpg");
     background-position-x: -600px;
     width: 100%;
-    height: auto;
+    height: 1500px;
     flex-direction: column;
   }
   .envios {
