--- a/cer/src/components/valeo/Valeo.css
+++ b/cer/src/components/valeo/Valeo.css
@@ -1,5 +1,5 @@
 .contenedorValeo {
-  background-color: beige;
+  background-color: white;
   background-image: url("../../assets/ValeoOriginal.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
