--- a/cer/src/components/CarruselMarcas/CarruselMarcas.css
+++ b/cer/src/components/CarruselMarcas/CarruselMarcas.css
@@ -1,7 +1,12 @@
 .CarruselMarcas {
+  background-color: transparent;
   width: 40%;
   margin: 0 auto;
   margin-top: 5%;
+}
+.carrusel {
+  width: 100%;
+  height: auto;
 }
 .d-block {
   margin: 0 auto;
