--- a/cer/src/components/Luk/Luk.css
+++ b/cer/src/components/Luk/Luk.css
@@ -1,13 +1,13 @@
 .contenedorLuk {
-  background-color: beige;
+  background-color: white;
   background-image: url("../../assets/LukOriginal.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   background-position-y: 35px;
-  margin: 0 auto;
   height: 500px;
   width: 100%;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
