--- a/cer/src/components/RepuestosVw/RepuestosVw.css
+++ b/cer/src/components/RepuestosVw/RepuestosVw.css
@@ -1,8 +1,21 @@
 .contenedorCartas {
+  background-color: transparent;
   display: inline-flexbox;
   flex-direction: row;
+
   margin: 0 auto;
   margin-top: 2%;
-  background-color: beige;
-  width: 90%;
+  width: 100%;
+}
+.gif {
+  width: 20%;
+  height: 20%;
+}
+.contenedorCartas .paginado {
+  width: 30%;
+  height: 100%;
+  background-color: transparent;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
