--- a/cer/src/components/Carrito/Carrito.css
+++ b/cer/src/components/Carrito/Carrito.css
@@ -10,19 +10,34 @@
   background-color: rgb(0, 0, 0);
   color: white;
 }
+.canvasTitle {
+  height: 50px;
+}
 .imagenCanvas {
   width: 20%;
   text-align: center;
 }
 .contenedorNombrePrecio {
-  background-color: black;
+  background-color: transparent;
   width: 60%;
-  height: 100%;
+  height: 100px;
   text-align: center;
   margin-left: 10%;
 }
+.Cantidades {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.h6 {
+  background-color: transparent;
+  margin-bottom: 20%;
+}
 .ContenedorCanvasRepuesto {
-  background-color: #646cff;
+  background-color: transparent;
+  margin-top: 5px;
   width: 100%;
   height: auto;
   display: flex;
@@ -32,7 +47,6 @@
 }
 .carrito {
   width: 40px;
-
   height: auto;
   will-change: filter;
   transition: filter 300ms;
@@ -41,19 +55,31 @@
   filter: drop-shadow(0 0 2em #646cff);
 }
 .contenedorCantidad {
+  /* align-items: center; */
   width: 60px;
   height: auto;
   border-radius: 10px;
   color: white;
-
+  background-color: transparent;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-weight: bold;
+}
+.parrafoCantidadCanvas {
+  background-color: rgb(55, 55, 55);
+  border-radius: 10px;
+  width: 40%;
+  margin-top: -10px;
+  font-size: medium;
+  text-align: center;
+  position: sticky;
 }
 .parrafoCantidad {
   background-color: rgb(55, 55, 55);
   border-radius: 10px;
   width: 40%;
-  margin-top: -18px;
+  margin-top: -10px;
+  font-size: medium;
+  text-align: center;
   position: sticky;
 }
 .boton {
