--- a/cer/src/components/RepuestosVw/RepuestosVw.css
+++ b/cer/src/components/RepuestosVw/RepuestosVw.css
@@ -1,8 +1,9 @@
 .contenedorCartas {
   background-color: transparent;
-  display: inline-flexbox;
-  flex-direction: row;
-
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
   margin: 0 auto;
   margin-top: 2%;
   width: 100%;
