--- a/cer/src/components/Card/Card.css
+++ b/cer/src/components/Card/Card.css
@@ -14,6 +14,15 @@
   display: flex;
   flex-direction: row;
 }
+.ContenedorCarrito {
+  width: 40%;
+  height: auto;
+  background-color: transparent;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
 .bodyCard {
   width: 50%;
   background-color: rgba(135, 144, 144, 0.264);
@@ -58,7 +67,7 @@
   width: 50px;
   height: auto;
   text-decoration: none;
-
+  background-color: transparent;
   align-items: center;
 }
 .titulo {
