--- a/cer/src/components/Carrito/Carrito.css
+++ b/cer/src/components/Carrito/Carrito.css
@@ -96,6 +96,7 @@
   background-color: transparent;
 }
 .ContenedorValores {
+  background-color: black;
   position: absolute;
   bottom: 2%;
   width: 90%;
@@ -106,9 +107,13 @@
   justify-content: space-between;
 }
 .botonCompra {
+  background-color: white;
   width: 100%;
   height: 50px;
   border-radius: 10px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: larger;
+}
+.botonCompra:hover {
+  background-color: #646cff;
 }
