--- a/cer/src/components/cantidadEnLa Card/CantidadEnLaCard.css
+++ b/cer/src/components/cantidadEnLa Card/CantidadEnLaCard.css
@@ -13,3 +13,7 @@
   text-align: center;
   margin: auto 0;
 }
+.cantidad {
+  font-size: 20px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
