--- a/cer/src/components/cantidadEnLa Card/CantidadEnLaCard.css
+++ b/cer/src/components/cantidadEnLa Card/CantidadEnLaCard.css
@@ -16,4 +16,6 @@
 .cantidad {
   font-size: 20px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  text-align: center;
+  margin-top: 80%;
 }
