--- a/cer/src/components/Carrito/Carrito.css
+++ b/cer/src/components/Carrito/Carrito.css
@@ -9,7 +9,8 @@
 .cuerpoCanvas {
   background-color: rgb(0, 0, 0);
   color: white;
-  margin-bottom: 60%;
+  margin-bottom: 72%;
+  overflow: hidden;
 }
 .canvasTitle {
   height: 50px;
@@ -45,6 +46,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  overflow-y: hidden;
 }
 .carrito {
   width: 40px;
