--- a/cer/src/components/Carrito/Carrito.css
+++ b/cer/src/components/Carrito/Carrito.css
@@ -32,6 +32,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+}
+.parrafoPrecioUnit {
+  text-align: center;
+  margin-top: 5%;
 }
 .h6 {
   background-color: transparent;
