--- a/cer/src/components/RepuestosVw/RepuestosVw.css
+++ b/cer/src/components/RepuestosVw/RepuestosVw.css
@@ -14,8 +14,12 @@
 }
 .contenedorLoading {
   background-color: transparent;
-  width: 1500px;
-  height: 30%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 5%;
+  height: auto;
   margin: auto auto;
   margin-top: 10%;
 }
