--- a/cer/src/components/RouteCarrito/RouteCarrito.css
+++ b/cer/src/components/RouteCarrito/RouteCarrito.css
@@ -7,12 +7,16 @@
   margin-top: 2%;
   border-radius: 10px;
 }
+.contenedorFooter {
+  width: 78%;
+  margin: 0 auto;
+}
 .card {
   background-color: transparent;
   flex-direction: row;
   margin-top: 1%;
 }
-.card-body {
+.cardCarrito {
   background-color: rgba(135, 144, 144, 0.264);
   width: 50%;
   border-radius: 5px;
@@ -38,4 +42,7 @@
 }
 .linkCarrito {
   width: 5px;
+}
+.colored-toast.swal2-icon-success {
+  background-color: #a5dc86 !important;
 }
