--- a/cer/src/components/RepuestosVw/RepuestosVw.css
+++ b/cer/src/components/RepuestosVw/RepuestosVw.css
@@ -75,3 +75,12 @@
   border-color: #007bff;
   font-weight: 600;
 }
+.contenedorSinProductos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #555;
+}
